# agentic-mcp-router

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
docs/: configuration.md
examples/: README.md  claude-mcp-connector.json  claude-mcp.md  compare_mcp.py  hub_quickstart.py  mcp-servers.yaml  measure_tokens.py  opencode_quickstart.py  quickstart.py
mcp-server/: pyproject.toml
mcp-server/mcp_tool_router/: mcp_http.py
python/: README.md  pyproject.toml
python/mcp_tool_router/: __init__.py  hub.py  mcp_http.py  mcp_stdio.py  opencode_config.py  registry.py  router.py  router_mcp_server.py
router-runtime/mcp_tool_router/: hub.py  mcp_stdio.py  opencode_config.py  router.py
scripts/: bm25-diagnostic.ts
src/: index.ts  postinstall.ts
src/core/: bm25.ts  catalog.ts  core.ts  factory.ts  index.ts  regex.ts  result-reducer.ts  utils.ts  working-set.ts
src/daemon/: cli.ts  index.ts
src/shared/: types.ts
