[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpflow"
version = "0.1.0"
description = "Python wrapper for mcpflow daemon"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mcpflow contributors" }
]
keywords = ["mcp", "tools", "router", "bm25"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]
dependencies = ["pyyaml>=6.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_tool_router"]
